# ccxt-rust

./: .gitignore  Cargo.toml  README.md
ccxt/: Cargo.toml  LICENSE
ccxt-cli/: Cargo.toml  README.md
ccxt-cli/src/: main.rs
ccxt/src/: coinbase.rs  errors.rs  exchange.rs  kraken.rs  lib.rs  rfc1123_date_format.rs
ccxt/tests/: kraken_tests.rs
src/: main.rs
