[package]
name = "ccxt"
version = "0.1.0"
edition = "2018"
authors = ["Rafal Piotrowski <rafal.piotrowski@live.com>"]
license = "MIT"
description = "Rust implementation of CCXT - CryptoCurrency Exchange Trading library"
repository = "https://github.com/rafalpiotrowski/ccxt-rust"
documentation = "https://docs.rs/ccxt"
categories = ["trading"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
thiserror = "1.0.26"
serde = "1.0.127"
serde_json = "1.0.66"
serde_derive = "1.0.127"
chrono = { version = "0.4", features = [ "serde" ] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.10.0", features = ["full"] }
async-trait = "0.1.51"
sha2 = "0.9.5"
data-encoding = "2.3.2"
hmac = "0.11.0"
